# my_develop_tools

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: github_pages.yml
Windows/: .gitignore  myapp.ps1  propeties.json  setup.txt  ネタ.txt  出向時など手動準備.txt
Windows/MyBatchSystem/: .gitignore  README.md  my_batch_start.bat  setup.bat
Windows/MyBatchSystem/batch_sample/: sample_batch.ps1
Windows/beta/ChangeLanguage/: ChangeSystemDisplayLanguage.ps1  Documentation.htm  README.md
Windows/src/: README.md  define_functions.ps1  init.ps1
Windows/useful/: input_command.ps1  observe.ps1
Windows/user_administrator/: Change_Firewall.ps1  get_machine_info.ps1  neta.txt
Windows/user_administrator_aws/: enable_internet_explorer.ps1
Windows/user_local/: InitializePowrShellProfile.ps1  README.md
Windows/user_local/automatable/: config_windows.txt
Windows/user_local/dev_excel/: command.txt
Windows/user_local/src/: prompt.ps1
Windows/windows_sygwin/: .gitconfig
common/: Makefile
docs/: windows.md
print_page/: index.html
search/: search_index.json
ubuntu/: README.md  setup.sh
windows/: index.html
